2019-1/220/users/4267/executions/1693_1101.log
== TEST (2019-04-30 21:50:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cons = float(input("Digite o seu consumo: "))
tipo = input("Digite o tipo de instalacao, R, I ou C: ")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 21:53:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cons = float(input("Digite o seu consumo: "))
tipo = input("Digite o tipo de instalacao, R, I ou C: ")
print("Entradas:", cons, "kWh e tipo", tipo)
#if(cons>=0 and (tipo=="R" or tipo=="I" or tipo=="C")):
#	if
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:38:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cons = float(input("Digite o seu consumo: "))
tipo = input("Digite o tipo de instalacao, R, I ou C: ")
print("Entradas:", cons, "kWh e tipo", tipo)
if(cons>=0 and (tipo=="R" or tipo=="I" or tipo=="C")):
	if(tipo=="R"):
	elif(cons<=500):
		valor=0.44*cons
		print(round("Valor total: R$", valor,2))
else:
	print("Dados invalidos")
-- ERROR:
File "XXXX", line 9
    elif(cons<=500):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:38:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cons = float(input("Digite o seu consumo: "))
tipo = input("Digite o tipo de instalacao, R, I ou C: ")
print("Entradas:", cons, "kWh e tipo", tipo)
if(cons>=0 and (tipo=="R" or tipo=="I" or tipo=="C")):
	if(tipo=="R"):
	elif(cons<=500):
		valor=0.44*cons
	#	print(round("Valor total: R$", valor,2))
else:
	print("Dados invalidos")
-- ERROR:
File "XXXX", line 9
    elif(cons<=500):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:41:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cons = float(input("Digite o seu consumo: "))
tipo = input("Digite o tipo de instalacao, R, I ou C: ")
print("Entradas:", cons, "kWh e tipo", tipo)
if(cons>=0 and (tipo=="R" or tipo=="I" or tipo=="C")):
	if(tipo=="R"):
	elif(cons<=500):
		valor=0.44*cons
		print(round("Valor total: R$", valor,2))
	else: 
		valor=0.65*cons
		print(round("Valor total: R$", valor,2))
	if(tipo=="C"):
	elif(cons<=1000):
		valor=0.55*cons
		print(round("Valor total: R$", valor,2))
	else: 
		valor=0.60*cons
		print(round("Valor total: R$", valor,2))	
	if(tipo=="I"):
	elif(cons<=5000):
		valor=0.55*cons
		print(round("Valor total: R$", valor,2))
	else: 
		valor=0.60*cons
		print(round("Valor total: R$", valor,2))	
else:
	print("Dados invalidos")
-- ERROR:
File "XXXX", line 9
    elif(cons<=500):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:42:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cons = float(input("Digite o seu consumo: "))
tipo = input("Digite o tipo de instalacao, R, I ou C: ")
print("Entradas:", cons, "kWh e tipo", tipo)
if(cons>=0 and (tipo=="R" or tipo=="I" or tipo=="C")):
	if(tipo=="R"):
	elif(cons<=500):
		valor=0.44*cons
		print(round("Valor total: R$", valor,2))
		else: 
			valor=0.65*cons
			print(round("Valor total: R$", valor,2))
	if(tipo=="C"):
	elif(cons<=1000):
		valor=0.55*cons
		print(round("Valor total: R$", valor,2))
		else: 
			valor=0.60*cons
			print(round("Valor total: R$", valor,2))	
	if(tipo=="I"):
	elif(cons<=5000):
		valor=0.55*cons
		print(round("Valor total: R$", valor,2))
		else: 
			valor=0.60*cons
			print(round("Valor total: R$", valor,2))	
else:
	print("Dados invalidos")
-- ERROR:
File "XXXX", line 9
    elif(cons<=500):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:45:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cons = float(input("Digite o seu consumo: "))
tipo = input("Digite o tipo de instalacao, R, I ou C: ")
print("Entradas:", cons, "kWh e tipo", tipo)
if(cons>=0 and (tipo=="R" or tipo=="I" or tipo=="C")):
	if(tipo=="R"):
		else:	
			if(cons<=500):
				valor=0.44*cons
				print(round("Valor total: R$", valor,2))
			else: 
				valor=0.65*cons
				print(round("Valor total: R$", valor,2))
	if(tipo=="C"):
		else:
			if(cons<=1000):
				valor=0.55*cons
			print(round("Valor total: R$", valor,2))
			else: 
				valor=0.60*cons
				print(round("Valor total: R$", valor,2))	
	if(tipo=="I"):
		else:
			if(cons<=5000):
				valor=0.55*cons
				print(round("Valor total: R$", valor,2))
		else: 
				valor=0.60*cons
				print(round("Valor total: R$", valor,2))	
else:
	print("Dados invalidos")
-- ERROR:
File "XXXX", line 9
    else:	
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:46:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cons = float(input("Digite o seu consumo: "))
tipo = input("Digite o tipo de instalacao, R, I ou C: ")
print("Entradas:", cons, "kWh e tipo", tipo)
if(cons>=0 and (tipo=="R" or tipo=="I" or tipo=="C")):
	if(tipo=="R"):
		else:	
			if(cons<=500):
				valor=0.44*cons
				print(round("Valor total: R$", valor,2))
			else: 
				valor=0.65*cons
			#	print(round("Valor total: R$", valor,2))
	if(tipo=="C"):
		else:
			if(cons<=1000):
				valor=0.55*cons
			print(round("Valor total: R$", valor,2))
			else: 
				valor=0.60*cons
			#	print(round("Valor total: R$", valor,2))	
	if(tipo=="I"):
		else:
			if(cons<=5000):
				valor=0.55*cons
				print(round("Valor total: R$", valor,2))
		else: 
				valor=0.60*cons
				#print(round("Valor total: R$", valor,2))	
else:
	print("Dados invalidos")
-- ERROR:
File "XXXX", line 9
    else:	
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:48:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cons = float(input("Digite o seu consumo: "))
tipo = input("Digite o tipo de instalacao, R, I ou C: ")
print("Entradas:", cons, "kWh e tipo", tipo)
if(cons>=0 and (tipo=="R" or tipo=="I" or tipo=="C")):
	if(tipo=="R"):
		else:	
			if(cons<=500):
				valor=0.44*cons
				print(round("Valor total: R$", valor,2))
			else: 
				valor=0.65*cons
				print(round("Valor total: R$", valor,2))
	if(tipo=="C"):
		else:
			if(cons<=1000):
				valor=0.55*cons
			print(round("Valor total: R$", valor,2))
			else: 
				valor=0.60*cons
				print(round("Valor total: R$", valor,2))	
	if(tipo=="I"):
		else:
			if(cons<=5000):
				valor=0.55*cons
				print(round("Valor total: R$", valor,2))
		else: 
				valor=0.60*cons
				print(round("Valor total: R$", valor,2))	
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.221758
-- ERROR:
  File "/home/codebench/codes/1693/1101/main.py", line 9
    else:	
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:48:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cons = float(input("Digite o seu consumo: "))
tipo = input("Digite o tipo de instalacao, R, I ou C: ")
print("Entradas:", cons, "kWh e tipo", tipo)
if(cons>=0 and (tipo=="R" or tipo=="I" or tipo=="C")):
	if(tipo=="R"):
		else:	
			if(cons<=500):
				valor=0.44*cons
				print(round("Valor total: R$", valor,2))
			else: 
				valor=0.65*cons
				print(round("Valor total: R$", valor,2))
	if(tipo=="C"):
		else:
			if(cons<=1000):
				valor=0.55*cons
			print(round("Valor total: R$", valor,2))
			else: 
				valor=0.60*cons
				print(round("Valor total: R$", valor,2))	
	if(tipo=="I"):
		else:
			if(cons<=5000):
				valor=0.55*cons
				print(round("Valor total: R$", valor,2))
		else: 
				valor=0.60*cons
				print(round("Valor total: R$", valor,2))	
else:
	print("Dados invalidos")
-- ERROR:
File "XXXX", line 9
    else:	
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:49:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cons = float(input("Digite o seu consumo: "))
tipo = input("Digite o tipo de instalacao, R, I ou C: ")
print("Entradas:", cons, "kWh e tipo", tipo)
if(cons>=0 and (tipo=="R" or tipo=="I" or tipo=="C")):
	if(tipo=="R"):
		else	
			if(cons<=500):
				valor=0.44*cons
				print(round("Valor total: R$", valor,2))
			else
				valor=0.65*cons
				print(round("Valor total: R$", valor,2))
	if(tipo=="C"):
		else
			if(cons<=1000):
				valor=0.55*cons
			print(round("Valor total: R$", valor,2))
			else
				valor=0.60*cons
				print(round("Valor total: R$", valor,2))	
	if(tipo=="I"):
		else
			if(cons<=5000):
				valor=0.55*cons
				print(round("Valor total: R$", valor,2))
		else
				valor=0.60*cons
				print(round("Valor total: R$", valor,2))	
else
	print("Dados invalidos")
-- ERROR:
File "XXXX", line 9
    else	
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:49:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cons = float(input("Digite o seu consumo: "))
tipo = input("Digite o tipo de instalacao, R, I ou C: ")
print("Entradas:", cons, "kWh e tipo", tipo)
if(cons>=0 and (tipo=="R" or tipo=="I" or tipo=="C")):
	if(tipo=="R"):
		else:	
			if(cons<=500):
				valor=0.44*cons
				print(round("Valor total: R$", valor,2))
			else: 
				valor=0.65*cons
				print(round("Valor total: R$", valor,2))
	if(tipo=="C"):
		else:
			if(cons<=1000):
				valor=0.55*cons
			print(round("Valor total: R$", valor,2))
			else: 
				valor=0.60*cons
				print(round("Valor total: R$", valor,2))	
	if(tipo=="I"):
		else:
			if(cons<=5000):
				valor=0.55*cons
				print(round("Valor total: R$", valor,2))
		else: 
				valor=0.60*cons
				print(round("Valor total: R$", valor,2))	
else:
	print("Dados invalidos")
-- ERROR:
File "XXXX", line 9
    else:	
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:51:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cons = float(input("Digite o seu consumo: "))
tipo = input("Digite o tipo de instalacao, R, I ou C: ")
print("Entradas:", cons, "kWh e tipo", tipo)
if(cons>=0 and (tipo=="R" or tipo=="I" or tipo=="C")):
	if(tipo=="R"):
			if(cons<=500):
				valor=0.44*cons
				print(round("Valor total: R$", valor,2))
			else: 
				valor=0.65*cons
				print(round("Valor total: R$", valor,2))
	if(tipo=="C"):
			if(cons<=1000):
				valor=0.55*cons
				print(round("Valor total: R$", valor,2))
			else: 
				valor=0.60*cons
				print(round("Valor total: R$", valor,2))	
	if(tipo=="I"):
			if(cons<=5000):
				valor=0.55*cons
				print(round("Valor total: R$", valor,2))
			else: 
				valor=0.60*cons
				print(round("Valor total: R$", valor,2))	
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:52:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cons = float(input("Digite o seu consumo: "))
tipo = input("Digite o tipo de instalacao, R, I ou C: ")
print("Entradas:", cons, "kWh e tipo", tipo)
if(cons>=0 and (tipo=="R" or tipo=="I" or tipo=="C")):
	if(tipo=="R"):
			if(cons<=500):
				valor=0.44*cons
				print(round("Valor total: R$"+ valor,2))
			else: 
				valor=0.65*cons
				print(round("Valor total: R$"+ valor,2))
	if(tipo=="C"):
			if(cons<=1000):
				valor=0.55*cons
				print(round("Valor total: R$"+ valor,2))
			else: 
				valor=0.60*cons
				print(round("Valor total: R$"+ valor,2))	
	if(tipo=="I"):
			if(cons<=5000):
				valor=0.55*cons
				print(round("Valor total: R$"+ valor,2))
			else: 
				valor=0.60*cons
				print(round("Valor total: R$"+ valor,2))	
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:53:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cons = float(input("Digite o seu consumo: "))
tipo = input("Digite o tipo de instalacao, R, I ou C: ")
print("Entradas:", cons, "kWh e tipo", tipo)
if(cons>=0 and (tipo=="R" or tipo=="I" or tipo=="C")):
	if(tipo=="R"):
			if(cons<=500):
				valor=0.44*cons
				print(round("Valor total: R$" + valor,2))
			else: 
				valor=0.65*cons
				print(round("Valor total: R$" + valor,2))
	if(tipo=="C"):
			if(cons<=1000):
				valor=0.55*cons
				print(round("Valor total: R$" + valor,2))
			else: 
				valor=0.60*cons
				print(round("Valor total: R$" + valor,2))	
	if(tipo=="I"):
			if(cons<=5000):
				valor=0.55*cons
				print(round("Valor total: R$" + valor,2))
			else: 
				valor=0.60*cons
				print(round("Valor total: R$" + valor,2))	
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:56:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cons = float(input("Digite o seu consumo: "))
tipo = input("Digite o tipo de instalacao, R, I ou C: ")
print("Entradas:", cons, "kWh e tipo", tipo)
if(cons>=0 and (tipo=="R" or tipo=="I" or tipo=="C")):
	if(tipo=="R"):
			if(cons<=500):
				valor=0.44*cons
				valor=round(valor,2)
				print("Valor total: R$", valor)
			else: 
				valor=0.65*cons
				valor=round(valor,2)
				print("Valor total: R$", valor)
	if(tipo=="C"):
			if(cons<=1000):
				valor=0.55*cons
				valor=round(valor,2)
				print("Valor total: R$", valor)
			else: 
				valor=0.60*cons
				valor=round(valor,2)
				print("Valor total: R$", valor)
	if(tipo=="I"):
			if(cons<=5000):
				valor=0.55*cons
				valor=round(valor,2)
				print("Valor total: R$", valor)
			else: 
				valor=0.60*cons
				valor=round(valor,2)
				print("Valor total: R$", valor)	
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:56:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cons = float(input("Digite o seu consumo: "))
tipo = input("Digite o tipo de instalacao, R, I ou C: ")
print("Entradas:", cons, "kWh e tipo", tipo)
if(cons>=0 and (tipo=="R" or tipo=="I" or tipo=="C")):
	if(tipo=="R"):
			if(cons<=500):
				valor=0.44*cons
				valor=round(valor,2)
				print("Valor total: R$", valor)
			else: 
				valor=0.65*cons
				valor=round(valor,2)
				print("Valor total: R$", valor)
	if(tipo=="C"):
			if(cons<=1000):
				valor=0.55*cons
				valor=round(valor,2)
				print("Valor total: R$", valor)
			else: 
				valor=0.60*cons
				valor=round(valor,2)
				print("Valor total: R$", valor)
	if(tipo=="I"):
			if(cons<=5000):
				valor=0.55*cons
				valor=round(valor,2)
				print("Valor total: R$", valor)
			else: 
				valor=0.60*cons
				valor=round(valor,2)
				print("Valor total: R$", valor)	
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:56:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cons = float(input("Digite o seu consumo: "))
tipo = input("Digite o tipo de instalacao, R, I ou C: ")
print("Entradas:", cons, "kWh e tipo", tipo)
if(cons>=0 and (tipo=="R" or tipo=="I" or tipo=="C")):
	if(tipo=="R"):
			if(cons<=500):
				valor=0.44*cons
				valor=round(valor,2)
				print("Valor total: R$", valor)
			else: 
				valor=0.65*cons
				valor=round(valor,2)
				print("Valor total: R$", valor)
	if(tipo=="C"):
			if(cons<=1000):
				valor=0.55*cons
				valor=round(valor,2)
				print("Valor total: R$", valor)
			else: 
				valor=0.60*cons
				valor=round(valor,2)
				print("Valor total: R$", valor)
	if(tipo=="I"):
			if(cons<=5000):
				valor=0.55*cons
				valor=round(valor,2)
				print("Valor total: R$", valor)
			else: 
				valor=0.60*cons
				valor=round(valor,2)
				print("Valor total: R$", valor)	
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.23015
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
